# notifications

./: .gitignore  404.html  Cargo.toml  README.md  eslint.config.js  flake.nix  hashmap.json  index.html  introduction.html  notifications-store.html  package.json  pnpm-lock.yaml  setup.html
assets/: app.Ddipoty9.js  app.XbRurr8Z.js  app.jGzM4PXU.js  app.oXtFFft7.js  elements_my-notifications-icon-button.md.03CZHy-0.js  elements_my-notifications-icon-button.md.03CZHy-0.lean.js  elements_my-notifications-icon-button.md.7nh-EPnV.js  elements_my-notifications-icon-button.md.7nh-EPnV.lean.js  elements_my-notifications-icon-button.md.9l5goHd2.js  elements_my-notifications-icon-button.md.9l5goHd2.lean.js  elements_my-notifications-icon-button.md.BFKdyj8f.js  elements_my-notifications-icon-button.md.BFKdyj8f.lean.js  elements_my-notifications-icon-button.md.BMwLyv1l.js  elements_my-notifications-icon-button.md.BMwLyv1l.lean.js  elements_my-notifications-icon-button.md.BWudxrt2.js  elements_my-notifications-icon-button.md.BWudxrt2.lean.js  elements_my-notifications-icon-button.md.BaeZA_vs.js  elements_my-notifications-icon-button.md.BaeZA_vs.lean.js  elements_my-notifications-icon-button.md.BemAP1Le.js  elements_my-notifications-icon-button.md.BemAP1Le.lean.js  elements_my-notifications-icon-button.md.BfQHOpa7.js  elements_my-notifications-icon-button.md.BjQFN3Lp.js  elements_my-notifications-icon-button.md.BqOz5sh3.js  elements_my-notifications-icon-button.md.BqOz5sh3.lean.js  elements_my-notifications-icon-button.md.Br9ROnHB.js  elements_my-notifications-icon-button.md.Br9ROnHB.lean.js  elements_my-notifications-icon-button.md.BtlFy_1i.js  elements_my-notifications-icon-button.md.BtlFy_1i.lean.js  elements_my-notifications-icon-button.md.BvapmGfW.js  elements_my-notifications-icon-button.md.BvapmGfW.lean.js  elements_my-notifications-icon-button.md.BycBOegU.js  elements_my-notifications-icon-button.md.BycBOegU.lean.js  elements_my-notifications-icon-button.md.C0dRY0fV.js  elements_my-notifications-icon-button.md.C0dRY0fV.lean.js  elements_my-notifications-icon-button.md.C2YNA5hh.js  elements_my-notifications-icon-button.md.C2YNA5hh.lean.js  elements_my-notifications-icon-button.md.C3s4wZIn.js  elements_my-notifications-icon-button.md.C3s4wZIn.lean.js  elements_my-notifications-icon-button.md.C6byK0ln.js  elements_my-notifications-icon-button.md.C6byK0ln.lean.js  (+270 more)
backend/: .rustc_info.json  .rustdoc_fingerprint.json
crates/hc_zome_trait_notifications/: Cargo.toml
crates/hc_zome_trait_notifications/src/: lib.rs
docs/: index.md  introduction.md  notifications-store.md  package.json  setup.md
elements/: custom-elements.json  my-notifications-icon-button.html  my-notifications-list.html
tests/: package.json  (+1 more)
zomes/coordinator/example/: Cargo.toml  zome.nix
zomes/coordinator/example/src/: lib.rs
zomes/coordinator/notifications/: Cargo.toml  zome.nix
zomes/coordinator/notifications/src/: encrypted_message.rs  lib.rs  linked_devices.rs  notification.rs  notifications_settings.rs  profiles.rs  synchronize.rs  utils.rs
zomes/coordinator/notifications/tests/: notification.rs
zomes/coordinator/notifications/tests/common/: mod.rs
zomes/integrity/notifications/: Cargo.toml  zome.nix
zomes/integrity/notifications/src/: agent_encrypted_message.rs  lib.rs  linked_devices.rs  notification.rs  notifications_settings.rs  notifications_status_change.rs  profiles.rs  read_notifications.rs
(+3804 files in other folders)
