[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["zomes/coordinator/*", "zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
holochain = { version = "0.3.1-rc", default-features = false, features = [
  "test_utils",
] }
hdi = "0.4.1-rc"
hdk = "0.3.1-rc"
serde = "1.0.193"

