[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["zomes/coordinator/*", "zomes/integrity/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
holochain = { version = "0.3.2", default-features = false, features = [
  "test_utils",
] }
hdi = "0.4.2"
hdk = "0.3.2"
serde = "1.0.193"

