[package]
name = "notifications"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "notifications"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

notifications_integrity = { path = "../../integrity/notifications", package = "notifications_integrity" }

[dev-dependencies]
fixt = "0.3.0-beta-dev"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true }
tokio = { version = "1.3", features = ["full"] }

