[package]
name = "notifications"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "notifications"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

notifications_types = { path = "../../../crates/notifications_types" }
notifications_integrity = { path = "../../integrity/notifications", package = "notifications_integrity" }
