[package]
name = "notifications_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "notifications_integrity"

[dependencies]
hdi = { workspace = true }

serde = { workspace = true }
notifications_types = { path = "../../../crates/notifications_types" }
linked_devices_types = { git = "https://github.com/darksoil-studio/linked-devices", branch = "main" }
